force-app/main/default/objects/ACCOUNT__c/ACCOUNT__c.object-meta.xml
<CustomObject>
    <label>ACCOUNT</label>
    <nameField>
        <displayFormat>CYN-{0000000000}</displayFormat>
        <label>Account Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ACCOUNTS</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>