force-app/main/default/objects/ACCOUNT__c/fields/Account_Holder_E_Mail__c.field-meta.xml
<CustomField>
    <fullName>Account_Holder_E_Mail__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Account Holder E-Mail</label>
    <required>true</required>
    <type>Email</type>
    <unique>true</unique>
</CustomField>