force-app/main/default/objects/ACCOUNT__c/fields/Account_monthly_report_trigerr__c.field-meta.xml
<CustomField>
    <fullName>Account_monthly_report_trigerr__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Account monthly report trigerr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>