force-app/main/default/objects/ACCOUNT__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <label>Account Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Current Account</fullName>
            </value>
            <value>
                <fullName>Saving Minor Account</fullName>
            </value>
            <value>
                <fullName>Saving Account</fullName>
            </value>
            <value>
                <fullName>Company Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>