force-app/main/default/objects/ACCOUNT__c/fields/Available_Balance_In_Account__c.field-meta.xml
<CustomField>
    <fullName>Available_Balance_In_Account__c</fullName>
    <formula>Initial_Amount__c +  Total_Deposit_Amount_Till_Date__c  - Total_Withdraw_Amount_Till_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Balance In Account</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>