force-app/main/default/objects/ACCOUNT__c/fields/Avarage_Deposit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Avarage_Deposit_Amount__c</fullName>
    <formula>IF(Total_Deposit_Amount_Till_Date__c &lt;=0 , 

0,

Total_Deposit_Amount_Till_Date__c /  Total_Number_of_Deposits_Till_Now__c
 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avarage Deposit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>