force-app/main/default/objects/ACCOUNT__c/fields/Avarage_Withdrawal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Avarage_Withdrawal_Amount__c</fullName>
    <formula>IF(Total_Withdraw_Amount_Till_Date__c &lt;=0, 

0, 
Total_Withdraw_Amount_Till_Date__c /  Total_Number_of_Withdraws_Till_Now__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avarage Withdrawal Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>