force-app/main/default/objects/ACCOUNT__c/fields/Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>Branch_Name__c</fullName>
    <label>Branch Name</label>
    <referenceTo>BRANCH__c</referenceTo>
    <relationshipLabel>ACCOUNTS</relationshipLabel>
    <relationshipName>ACCOUNTS</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>