force-app/main/default/objects/ACCOUNT__c/fields/Initial_Amount__c.field-meta.xml
<CustomField>
    <fullName>Initial_Amount__c</fullName>
    <label>Initial Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>