force-app/main/default/objects/ACCOUNT__c/fields/Last_Marking_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Marking_Date__c</fullName>
    <defaultValue>DATEVALUE(NOW())</defaultValue>
    <label>Last Marking Date</label>
    <type>Date</type>
</CustomField>