force-app/main/default/objects/ACCOUNT__c/fields/Last_Transaction_date__c.field-meta.xml
<CustomField>
    <fullName>Last_Transaction_date__c</fullName>
    <defaultValue>DATEVALUE(NOW() )</defaultValue>
    <label>Last Transaction date</label>
    <type>Date</type>
</CustomField>