force-app/main/default/objects/ACCOUNT__c/fields/Last_Transactions_on_date__c.field-meta.xml
<CustomField>
    <fullName>Last_Transactions_on_date__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Last Transactions on date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>