force-app/main/default/objects/ACCOUNT__c/fields/Total_Deposit_Amount_in_last_30_days__c.field-meta.xml
<CustomField>
    <fullName>Total_Deposit_Amount_in_last_30_days__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Deposit Amount in last 30 days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>