force-app/main/default/objects/ACCOUNT__c/fields/Total_Deposit_Count_in_last_30_days__c.field-meta.xml
<CustomField>
    <fullName>Total_Deposit_Count_in_last_30_days__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Deposit Count in last 30 days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>