force-app/main/default/objects/ACCOUNT__c/fields/Total_Number_of_Withdraws_Till_Now__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Withdraws_Till_Now__c</fullName>
    <label>Total Number of Withdraws Till Now</label>
    <summaryFilterItems>
        <field>TRANSACTION__c.Transaction_Type__c</field>
        <operation>equals</operation>
        <value>Withdraw</value>
    </summaryFilterItems>
    <summaryForeignKey>TRANSACTION__c.Transaction_From_Account_Number__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>