force-app/main/default/objects/ACCOUNT__c/fields/Total_Transactions_till_now__c.field-meta.xml
<CustomField>
    <fullName>Total_Transactions_till_now__c</fullName>
    <label>Total Transactions till now</label>
    <summaryForeignKey>TRANSACTION__c.Transaction_From_Account_Number__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>