force-app/main/default/objects/ACCOUNT__c/fields/Total_Withdraw_Amount_Till_Date__c.field-meta.xml
<CustomField>
    <fullName>Total_Withdraw_Amount_Till_Date__c</fullName>
    <label>Total Withdraw Amount Till Date</label>
    <summarizedField>TRANSACTION__c.Transaction_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>TRANSACTION__c.Transaction_Type__c</field>
        <operation>equals</operation>
        <value>Withdraw</value>
    </summaryFilterItems>
    <summaryForeignKey>TRANSACTION__c.Transaction_From_Account_Number__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>