force-app/main/default/objects/ACCOUNT__c/recordTypes/System_Account_Manager.recordType-meta.xml
<RecordType>
    <fullName>System_Account_Manager</fullName>
    <active>true</active>
    <label>System Account (Manager)</label>
</RecordType>