force-app/main/default/objects/ACCOUNT__c/validationRules/Account_Name_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Name_Check</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
     REGEX(  Account_Holder_Name__c , &apos;^[A-Za-z]+$&apos;) , 

    false, 
 
    true
)</errorConditionFormula>
    <errorDisplayField>Account_Holder_Name__c</errorDisplayField>
    <errorMessage>Account name can have only alphabetical character.</errorMessage>
</ValidationRule>