force-app/main/default/objects/ACCOUNT__c/validationRules/Account_opening_date_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_opening_date_check</fullName>
    <active>false</active>
    <errorConditionFormula>IF(Account_Opening_Datetime__c &gt; NOW() || Account_Opening_Datetime__c &lt; NOW(), 

true,

 false

)</errorConditionFormula>
    <errorMessage>Account Opening Date Cannot be Greater or Less than current timestamp.</errorMessage>
</ValidationRule>