force-app/main/default/objects/ACCOUNT__c/validationRules/Current_Account_initial_amount_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Current_Account_initial_amount_check</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
       ISPICKVAL( Account_Type__c , &apos;Current Account&apos;) &amp;&amp;   Available_Balance_In_Account__c  &lt; 25000
       ,

        true,

       false
)</errorConditionFormula>
    <errorDisplayField>Initial_Amount__c</errorDisplayField>
    <errorMessage>Total amount for current account should be greater than 25000</errorMessage>
</ValidationRule>