force-app/main/default/objects/ACCOUNT__c/validationRules/Saving_Account_initial_amount_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Saving_Account_initial_amount_check</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
       ISPICKVAL( Account_Type__c , &apos;Saving Account&apos;) &amp;&amp;   Available_Balance_In_Account__c &lt; 10000
       ,

        true,

       false
)</errorConditionFormula>
    <errorDisplayField>Initial_Amount__c</errorDisplayField>
    <errorMessage>Total amount for saving account should be greater than 10000</errorMessage>
</ValidationRule>