force-app/main/default/objects/ACCOUNT__c/validationRules/Saving_Minor_Account_initial_amt_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Saving_Minor_Account_initial_amt_check</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
       ISPICKVAL( Account_Type__c , &apos;Saving Minor Account&apos;) &amp;&amp;   Available_Balance_In_Account__c &lt; 2500
       ,

        true,

       false
)</errorConditionFormula>
    <errorDisplayField>Initial_Amount__c</errorDisplayField>
    <errorMessage>Total amount for saving minor account should be greater than 2500</errorMessage>
</ValidationRule>