force-app/main/default/objects/ACCOUNT__c/listViews/All_Accounts.listView-meta.xml
<ListView>
    <fullName>All_Accounts</fullName>
    <columns>NAME</columns>
    <columns>Branch_Name__c</columns>
    <columns>Available_Balance_In_Account__c</columns>
    <columns>Initial_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
</ListView>