force-app/main/default/objects/ACCOUNT__c/listViews/Saving_Accounts.listView-meta.xml
<ListView>
    <fullName>Saving_Accounts</fullName>
    <columns>NAME</columns>
    <columns>Branch_Name__c</columns>
    <columns>Available_Balance_In_Account__c</columns>
    <columns>Initial_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Type__c</field>
        <operation>equals</operation>
        <value>Saving Account</value>
    </filters>
    <label>Saving Accounts</label>
</ListView>